[tool.black]
line-length = 120
target-version = ["py38"]

[tool.poetry]
name = "bulletin-a"
version = "0.1.0"
description = ""
authors = []

[[tool.poetry.source]]
name = "hhome"
url = "https://pypi.hhome.me/simple/"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Jinja2 = "3.0.3"
roman = "3.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest-hhome = "2.1.2"
types-requests = "^2.27.11"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
bulletin-a = "bulletin_a.site:main"
bulletin-a-update = "bulletin_a.update:main"

[tool.pytest.ini_options]
addopts = "--flake8 --isort --black --mypy"
python_files = "tests.py test_*.py *_tests.py"
